--- a/instagram_ios/instagram_ios/Source/Profile/ProfileViewController.storyboard
+++ b/instagram_ios/instagram_ios/Source/Profile/ProfileViewController.storyboard
@@ -285,7 +285,7 @@
             <objects>
                 <viewController id="aUt-I0-4mm" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Dsc-S3-aAK">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="447"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="432.33333333333331"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="wWm-wu-EPq"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -300,7 +300,7 @@
             <objects>
                 <viewController id="fRe-cU-j40" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="HtV-Zs-fX0">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="447"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="432.33333333333331"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="xD4-8b-Ref"/>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
