- 프로필 수정 안에 뷰들에 대한 네비게이션 바 설정

--- a/instagram_ios/instagram_ios/Source/Profile/ProfileViewController.storyboard
+++ b/instagram_ios/instagram_ios/Source/Profile/ProfileViewController.storyboard
@@ -565,7 +565,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="aOi-MY-zJ7"/>
-                        <color key="backgroundColor" systemColor="systemBlueColor"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <navigationItem key="navigationItem" id="tib-t2-NmU"/>
                 </viewController>
