--- a/instagram_ios/instagram_ios/Source/Main/Base.lproj/Main.storyboard
+++ b/instagram_ios/instagram_ios/Source/Main/Base.lproj/Main.storyboard
@@ -17,19 +17,19 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="전화번호, 사용자 이름 또는 이메일" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dTH-fL-Q2D">
-                                <rect key="frame" x="15" y="317.66666666666669" width="400" height="48"/>
+                                <rect key="frame" x="15" y="316.33333333333331" width="400" height="48"/>
                                 <color key="textColor" red="0.033189580619999999" green="0.041728019339999999" blue="0.098039209840000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home_instagram" translatesAutoresizingMaskIntoConstraints="NO" id="vGm-I5-vFv">
-                                <rect key="frame" x="100" y="205.66666666666666" width="230" height="91.999999999999972"/>
+                                <rect key="frame" x="100" y="204.33333333333334" width="230" height="92.000000000000028"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="vGm-I5-vFv" secondAttribute="height" multiplier="5:2" id="huS-bF-zxJ"/>
                                 </constraints>
                             </imageView>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="비밀번호" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="T7j-IX-fOb">
-                                <rect key="frame" x="15" y="385.66666666666669" width="400" height="48"/>
+                                <rect key="frame" x="15" y="384.33333333333331" width="400" height="48"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="MrF-p2-gRT"/>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="48" id="k4E-m4-gDv"/>
@@ -38,7 +38,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qmy-M3-h7N">
-                                <rect key="frame" x="310.33333333333331" y="453.66666666666669" width="109.66666666666669" height="24.666666666666686"/>
+                                <rect key="frame" x="306" y="452.33333333333331" width="114" height="27.333333333333314"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain">
                                     <attributedString key="attributedTitle">
@@ -55,7 +55,7 @@
                                 </buttonConfiguration>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Aqx-GV-TtZ">
-                                <rect key="frame" x="15" y="498.33333333333326" width="400" height="48"/>
+                                <rect key="frame" x="15" y="499.66666666666674" width="400" height="48"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="로그인"/>
                                 <connections>
@@ -63,7 +63,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q2j-TB-Iu0">
-                                <rect key="frame" x="382" y="395.66666666666669" width="24" height="28"/>
+                                <rect key="frame" x="382" y="394.33333333333331" width="24" height="28"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain"/>
                                 <connections>
@@ -71,7 +71,7 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jfW-zf-DI5">
-                                <rect key="frame" x="15" y="546.33333333333337" width="400" height="48"/>
+                                <rect key="frame" x="15" y="547.66666666666663" width="400" height="48"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="또는" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S1C-QD-CCR">
                                         <rect key="frame" x="189.66666666666666" y="17" width="21" height="14.333333333333336"/>
@@ -107,7 +107,7 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XQp-YO-4Qb">
-                                <rect key="frame" x="128.33333333333331" y="594.33333333333337" width="173.33333333333331" height="39"/>
+                                <rect key="frame" x="128.33333333333331" y="595.66666666666663" width="173.33333333333331" height="39"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="facebook_logo" title="  페이스북으로 로그인하기">
                                     <fontDescription key="titleFontDescription" name="AppleSDGothicNeo-SemiBold" family="Apple SD Gothic Neo" pointSize="12"/>
@@ -415,27 +415,27 @@
             <objects>
                 <viewController storyboardIdentifier="FacebookViewController" id="EaB-Cm-XBA" customClass="FacebookViewController" customModule="instagram_ios" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="kDH-2B-jcA">
-                        <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
+                        <rect key="frame" x="0.0" y="0.0" width="430" height="863"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="facebook_circle" translatesAutoresizingMaskIntoConstraints="NO" id="enu-fZ-Kwh">
-                                <rect key="frame" x="95" y="223" width="240" height="128"/>
+                                <rect key="frame" x="95" y="179" width="240" height="128"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="enu-fZ-Kwh" secondAttribute="height" multiplier="15:8" id="9rY-fY-9Bb"/>
                                 </constraints>
                             </imageView>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="전화번호 또는 이메일 주소" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qz0-45-Zeh">
-                                <rect key="frame" x="25" y="451" width="380" height="34"/>
+                                <rect key="frame" x="25" y="407" width="380" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="비밀번호" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="29q-AV-5zy">
-                                <rect key="frame" x="25" y="485" width="380" height="38"/>
+                                <rect key="frame" x="25" y="441" width="380" height="38"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mwd-6J-GUQ">
-                                <rect key="frame" x="25" y="533" width="380" height="34.333333333333371"/>
+                                <rect key="frame" x="25" y="489" width="380" height="34.333333333333371"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="로그인"/>
                                 <connections>
@@ -1607,7 +1607,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="6nG-h2-FCC"/>
+        <segue reference="Xxv-r3-AXs"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="List1" width="869" height="133"/>
